--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="col-lg-8 text-center">
                 <h1 class="display-5 fw-bold mb-3">Website Compliance Auditor</h1>
                 <p class="lead text-muted">
-                    Verify your website's compliance with Ghana's Cybersecurity Act, HIPAA, ISO 27001, NIST CSF and other frameworks
+                    Verify your website's compliance with various security frameworks
                 </p>
             </div>
         </div>
